PORTALBE-138: Add email address config for error message sending