@@ -2,6 +2,7 @@ package ai.salesfox.portal.event.license.organization;
 
 import ai.salesfox.portal.common.service.billing.LicenseBillingService;
 import ai.salesfox.portal.common.service.email.EmailMessagingService;
+import ai.salesfox.portal.common.service.email.PortalEmailAddressConfiguration;
 import ai.salesfox.portal.common.service.email.PortalEmailException;
 import ai.salesfox.portal.common.service.email.model.EmailMessageModel;
 import ai.salesfox.portal.database.license.LicenseTypeEntity;
@@ -16,7 +17,7 @@ import org.springframework.stereotype.Component;
 import org.springframework.transaction.event.TransactionPhase;
 import org.springframework.transaction.event.TransactionalEventListener;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
@@ -24,21 +25,17 @@ import java.util.UUID;
 @Component
 // TODO consider splitting this event handling up
 public class OrganizationAccountLicenseChangedEventListener {
-    // FIXME add an endpoint and service for this
-    private static final String[] ADMIN_NOTIFICATION_EMAIL_ADDRESSES = {
-            "sales@salesfox.ai",
-            "john.simion@salesfox.ai"
-    };
-
     private final OrganizationAccountLicenseRepository organizationAccountLicenseRepository;
     private final LicenseBillingService licenseBillingService;
     private final EmailMessagingService emailMessagingService;
+    private final PortalEmailAddressConfiguration portalEmailAddressConfiguration;
 
     @Autowired
-    public OrganizationAccountLicenseChangedEventListener(OrganizationAccountLicenseRepository organizationAccountLicenseRepository, LicenseBillingService licenseBillingService, EmailMessagingService emailMessagingService) {
+    public OrganizationAccountLicenseChangedEventListener(OrganizationAccountLicenseRepository organizationAccountLicenseRepository, LicenseBillingService licenseBillingService, EmailMessagingService emailMessagingService, PortalEmailAddressConfiguration portalEmailAddressConfiguration) {
         this.organizationAccountLicenseRepository = organizationAccountLicenseRepository;
         this.licenseBillingService = licenseBillingService;
         this.emailMessagingService = emailMessagingService;
+        this.portalEmailAddressConfiguration = portalEmailAddressConfiguration;
     }
 
     @Async
@@ -86,8 +83,9 @@ public class OrganizationAccountLicenseChangedEventListener {
         OrganizationAccountEntity orgAcct = updatedOrgAcctLicense.getOrganizationAccountEntity();
         OrganizationEntity org = orgAcct.getOrganizationEntity();
 
+        String portalSupportEmail = portalEmailAddressConfiguration.getSupportEmailAddress();
         EmailMessageModel message = new EmailMessageModel(
-                Arrays.asList(ADMIN_NOTIFICATION_EMAIL_ADDRESSES),
+                List.of(portalSupportEmail),
                 "[Salesfox Portal] New User Added To License",
                 String.format("A new user was added to the organization account [%s > %s]", org.getOrganizationName(), orgAcct.getOrganizationAccountName()),
                 String.format(
